modified map divs to ensure full-screen alignment. Modified navbar to set height to enable better map page view.

--- a/app/assets/stylesheets/components/_map_div.scss
+++ b/app/assets/stylesheets/components/_map_div.scss
@@ -9,7 +9,7 @@
 .map-container {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Full viewport height */
+  height: 93vh; /* Full viewport height */
   width: 100vw; /* Full viewport width */
 }
 
@@ -25,7 +25,7 @@
   .search-container {
     display: flex;
     align-items: center;
-    width: 28%;
+    width: 25%;
     justify-content: space-between;
 
     input {
@@ -75,7 +75,7 @@
   width: 100%; /* Stretch full width */
 
   .sidebar {
-    width: 30%; /* Sidebar width */
+    width: 25%; /* Sidebar width */
     padding: 1rem;
     overflow-y: auto; /* Scrollable for long content */
   }
