--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #4D7494;
-  height: 59px;
+  height: 7vh;
 }
 
 .navbar-lewagon .navbar-collapse {
